[package]
name = "low-poly-terrain-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_panorbit_camera = "0.19.3"
noise = "0.9.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
