[package]
name = "yt-low-poly-terrain-bevy-live"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_panorbit_camera = "0.23"
noise = "0.9.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
